# a-arm

./: .gitignore
barmc/: Makefile  pyproject.toml
barmc/src/barmc/: core.py
barmd/: Cargo.toml  Makefile
barmd/src/: error.rs  main.rs
barmd/src/math/: kinematics.rs  mod.rs
barmd/src/server/: mod.rs  socket.rs
barmd/systemd/: barmd.service
client/barmc/: pyproject.toml
client/barmc/src/barmc/: core.py
server/barmd/src/: main.rs
