[project]
name = "barmc"
version = "0.1.0"
description = "The client component for team β robotic arm."
authors = [
    {name = "Oliver Johnson", email = "fillthisin@joliver.com"},
    {name = "Aislyn Graves", email = "fillthisin@agraves.org"}
]
license = {text = "MPL-2.0"}
requires-python = ">=3.13"
dependencies = [
    "gpiozero (>=2.0.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [{include = "barmc", from = "src"}]
